# task-manager

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  manage.py  pyproject.toml
configurations/: .env.sample  README.md
migrations/: env.py
server/config/: factory.py
server/config/environments/: base.py  development.py  production.py  staging.py
server/manager/: db.py  enums.py  exceptions.py  handlers.py  schemas.py  security.py  types.py  utils.py
